[gd_scene load_steps=9 format=2]

[ext_resource path="res://Juego/Naves/Estacion/Estacion.png" type="Texture" id=1]
[ext_resource path="res://Juego/Naves/Estacion/GravedadEstacion.tscn" type="PackedScene" id=2]
[ext_resource path="res://Juego/Naves/Estacion/Estacion_recarga.gd" type="Script" id=3]
[ext_resource path="res://Juego/Naves/Estacion/Recarga.ogg" type="AudioStream" id=4]
[ext_resource path="res://Juego/Naves/Estacion/Carga_vacia.ogg" type="AudioStream" id=5]

[sub_resource type="CapsuleShape2D" id=2]
radius = 64.0
height = 134.0

[sub_resource type="Animation" id=3]
resource_name = "Activado"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Estacion:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 3 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("GravedadEstacion:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.8, 1.7, 2.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 45, 45 ), Vector2( 50, 50 ), Vector2( 45, 45 ), Vector2( 48, 48 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "default"

[node name="Estacion_recarga" type="Node2D" groups=["minimapa"]]
script = ExtResource( 3 )

[node name="GravedadEstacion" parent="." instance=ExtResource( 2 )]

[node name="Estacion" type="Area2D" parent="."]
collision_layer = 0
space_override = 1
gravity_point = true

[node name="Sprite" type="Sprite" parent="Estacion"]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Estacion"]
shape = SubResource( 2 )

[node name="SonidoRecarga" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="SonidoSinEnergia" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "Activado"
anims/Activado = SubResource( 3 )
anims/default = SubResource( 4 )

[connection signal="body_entered" from="GravedadEstacion" to="." method="_on_GravedadEstacion_body_entered"]
[connection signal="body_exited" from="GravedadEstacion" to="." method="_on_GravedadEstacion_body_exited"]
[connection signal="body_entered" from="Estacion" to="." method="_on_Estacion_body_entered"]
